Version 1.2.10: Fixes an issue in the cropping mech

--- a/massmedia/static/massmedia/css/cropperwindow.css
+++ b/massmedia/static/massmedia/css/cropperwindow.css
@@ -102,7 +102,7 @@ p, hr, ul, ol, dl, blockquote, pre, address, fieldset, figure { margin: 0px 0px 
 .ng-input-group { position: relative; display: table; border-collapse: separate; }
 .ng-input-group-addon, .ng-input-group-btn, .ng-input-group input, .ng-input-group label { display: table-cell; }
 .ng-input-group label { height: 25px; vertical-align: middle; width: 200px; }
-input.ng-form-width-mini { width: 40px; }
+input.ng-form-width-mini { width: 70px; }
 .ng-input-group input { position: relative; z-index: 2; float: left; margin-bottom: 0px; }
 .ng-input-group input:first-child, .ng-input-group label + input, .ng-input-group input:not(:last-child), .ng-input-group-addon:first-child, .ng-input-group label + .ng-input-group-addon, .ng-input-group-btn:first-child > .ng-button, .ng-input-group-btn:first-child > .ng-pill-button, .ng-input-group-btn:last-child > .ng-button:not(:last-child):not(.dropdown-toggle), .ng-input-group-btn:last-child > .ng-pill-button:not(:last-child):not(.dropdown-toggle) { border-top-right-radius: 0px; border-bottom-right-radius: 0px; }
 .ng-form select, .ng-form textarea, .ng-form input:not([type]), .ng-form input[type="text"], .ng-form input[type="password"], .ng-form input[type="datetime"], .ng-form input[type="datetime-local"], .ng-form input[type="date"], .ng-form input[type="month"], .ng-form input[type="time"], .ng-form input[type="week"], .ng-form input[type="number"], .ng-form input[type="email"], .ng-form input[type="url"], .ng-form input[type="search"], .ng-form input[type="tel"], .ng-form input[type="color"] { height: 30px; max-width: 100%; padding: 4px 6px; border: 1px solid rgb(221, 221, 221); color: rgb(68, 68, 68); transition: all 0.2s linear; -webkit-transition: all 0.2s linear; border-radius: 4px; background: rgb(255, 255, 255); }
